# pg-mcp

./: .gitignore  ENTERPRISE_ASSESSMENT.md  EXAMPLES.md  README.md  assistant.db  docker-compose.yml  pyproject.toml
.github/instructions/: python.instructions.md
app/: __init__.py  api.py  auth.py  config.py  db.py  logger.py  main.py  mcp.py  postgres_service.py
test/: enterprise_stats_test.py  run_all_tests.py  simple_portfolio_test.py  test_01_core_connectivity.py  test_02_sales_crm.py  test_03_hr_analytics.py  test_04_portfolio_financial.py  test_05_advanced_analytics.py  test_echo_mcp.py  test_echo_mcp_comprehensive.py  test_portfolio_management.py
