[project]
name = "pg-mcp"
version = "0.1.0"
description = "Postgres MCP"

authors = [{"name"  = "Mai Thành Duy An", "email"="tiachop0102@gmail.com"}]

requires-python= ">=3.12"

dependencies = [
    "requests",
    "fastapi[all]",
    "uvicorn",
    "mcp",
    "PyJWT",
    "aiohttp",
    "pytest",
    "pytest-asyncio",
    "psycopg2-binary",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "alembic",
]

[project.scripts]
pg-mcp="app.main:main"

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"